<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#5B86C6"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scrollview"
        android:orientation="vertical"
        android:gravity="center"
        >

            <!--    My Start Now    -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/firstLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >
            <LinearLayout
                android:id="@+id/hotel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/hotel"
                    android:contentDescription="@string/travel"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/hotel"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/bus"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bus"
                    android:contentDescription="@string/travel"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Bus"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/gallery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gallery"
                    android:contentDescription="@string/travel"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/gallery"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/secondLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >
            <LinearLayout
                android:id="@+id/police"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/travel"
                    android:src="@drawable/policeman" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/police"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/around"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travel"
                    android:contentDescription="@string/travel"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/around"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/howto"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/manual"
                    android:contentDescription="@string/how"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/how"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/thirdLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >
            <LinearLayout
                android:id="@+id/small"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/smalltrip"
                    android:contentDescription="@string/travel"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/small"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/medium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/medium"
                    android:contentDescription="@string/travel"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/medium"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/big"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/bigtrip"
                    android:contentDescription="@string/travel"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/big_trip"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/fourthLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            >
            <LinearLayout
                android:id="@+id/parking"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travel"
                    android:contentDescription="@string/travel"
                    />
                <TextView
                    android:id="@+id/myText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/parking"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/helpLine"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travel"
                    android:contentDescription="@string/travel"
                    />
                <TextView
                    android:id="@+id/myText2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/help_line"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="center"
                android:background="@drawable/btn_selector"
                android:padding="5dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/travel"
                    android:contentDescription="@string/travel"
                    />
                <TextView
                    android:id="@+id/myText3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/here"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            />


    </LinearLayout>

</ScrollView>